[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Tile/Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/2D/Tile2D/Tile2D.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/sfx/kenney_tick_002.ogg" type="AudioStream" id=3]

[node name="Tile2D" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]
margin_right = 16.0
margin_bottom = 16.0
size_flags_horizontal = 12
size_flags_vertical = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer" index="0"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="Control" type="Control" parent="CenterContainer" index="1"]
margin_left = 8.0
margin_top = 8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CenterContainer" index="2"]
position = Vector2( 5.42392, 5.42392 )
stream = ExtResource( 3 )
volume_db = -35.0
pitch_scale = 0.93
bus = "Sfx"
[connection signal="gui_input" from="CenterContainer" to="." method="_on_CenterContainer_gui_input"]
[connection signal="mouse_entered" from="CenterContainer" to="." method="_on_CenterContainer_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer" to="." method="_on_CenterContainer_mouse_exited"]
